plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.shinhan'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // ulid-creator
    implementation group: 'com.github.f4b6a3', name: 'ulid-creator', version: '5.1.0'

    // valid
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'

    // mapstruct
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

    // webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // firebase
    implementation 'com.google.firebase:firebase-admin:6.8.1'

    // slack
    implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.30.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
